fixed overflow :zap:

--- a/src/css/main/contact.scss
+++ b/src/css/main/contact.scss
@@ -3,7 +3,6 @@
   min-height: 40vh;
   padding: 0 5rem;
   margin: 10rem 0 0;
-  overflow-x: hidden;
 
   .contact__title {
     @extend %title-60;
@@ -13,7 +12,7 @@
     display: inline-block;
     padding: 1rem;
     text-transform: uppercase;
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   .contact__wrapper {
